[package]
name = "whisper"
version = "0.1.8"
authors = ["Xavier Lange <xrlange@gmail.com>"]
description = "Whisper time series file support"
license = "MIT"
homepage = "https://www.github.com/tureus/graphite-rust"
repository = "https://github.com/tureus/whisper.git"

[[bin]]
name="whisper"

[dependencies]
byteorder = "*"
regex = "*"
libc = "*"
log = "*"
env_logger = "*"
memmap = "*"
lru-cache = "*"

docopt = "0.6.64"
rustc-serialize = "0.3.14"
time = "*"
