[package]
name = "whisper"
version = "0.1.10"
authors = ["Xavier Lange <xrlange@gmail.com>"]
description = "Whisper time series file support"
license = "MIT"
homepage = "https://www.github.com/tureus/graphite-rust"
repository = "https://github.com/tureus/whisper.git"

[[bin]]
name="whisper"

[dependencies]
byteorder = "1.0.0"
regex = "0.2.1"
libc = "0.2"
log = "0.4"
env_logger = "0.4"
memmap = "0.3"
lru-cache = "0.1"

docopt = "0.6.64"
rustc-serialize = "0.3.14"
time = "0.1"
